fix: Improved profile rendering on mobile

--- a/src/components/AuthorProfile/AuthorProfile.css
+++ b/src/components/AuthorProfile/AuthorProfile.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   gap: 8px;
+  flex-wrap: wrap;
 }
 
 .author-info a {
@@ -43,10 +44,6 @@
     width: 48px;
     height: 48px;
   }
-
-  .author-info {
-    width: 80vw;
-  }
 }
 
 .author-identity {
@@ -67,9 +64,5 @@
   .author-name {
     max-width: 14em;
     line-height: 24px;
-  }
-
-  .author-info {
-    flex-direction: column;
   }
 }
